manifests/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  labels:
    name: webapp
spec:
  rules:
  - host: "cloud.antalfiabenjamin.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-service
            port: 
              number: 443
